--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
             </svg>
         </button>
         <h1 class="mdc-typography--headline2">流量消失器</h1>
-        <p class="mdc-typography--body1">多线程消耗流量 机场佬直呼内行.</p>
-        <a href="http://db2.laomoe.com" target="_blank">外链jsdelivr版 感谢loc"萌十七“这位MJJ同志</a>
+        <p class="mdc-typography--body1">手机流量或者VPN流量多到没地方用？不如试试这个！让你的流量不断流失~.</p>
+        <p class="mdc-typography--body1">请注意不要随便作死，高频率跑流量可能会被你的VPN服务商对你痛下狠手（？？？）.</p>
         <p></p>
         <br>
         <div class="option__unlimited mdc-switch mdc-switch--checked" data-mdc-auto-init="MDCSwitch">
@@ -287,7 +287,7 @@
         </div>
         <br>
         <br>
-        <p class="option__threads-title mdc-typography--body2">线程（较高浪费速度更快，较低浪费精度更高）</p>
+        <p class="option__threads-title mdc-typography--body2">线程（线程越高浪费速度越快，较低浪费精度越高）</p>
         <div class="option__threads mdc-slider mdc-slider--discrete mdc-slider--display-markers" tabindex="0" role="slider" aria-valuemin="1" aria-valuemax="32" aria-valuenow="1" aria-label="Select Value" data-mdc-auto-init="MDCSlider">
             <div class="mdc-slider__track-container">
                 <div class="mdc-slider__track"></div>
